--- a/index.html
+++ b/index.html
@@ -79,11 +79,14 @@
 
 
     <!-- Main Content -->
-    <div class="max-w-7xl mx-auto px-4 py-8">
-        <div class="flex flex-col lg:flex-row gap-8">
+    <div class="max-w-8xl mx-auto px-4 py-8">
+        
+        <div>
+                 <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">Choose Your Trees</h2>
+             <div class="flex flex-col lg:flex-row gap-8">
             <!-- Categories Sidebar -->
             <div class="lg:w-1/4">
-                <div class="bg-white rounded-lg shadow-md p-6 sticky top-4">
+                <div class=" rounded-lg shadow-md p-6 sticky top-4">
                     <h3 class="text-lg font-semibold mb-4 text-gray-800">Categories</h3>
                     <div id="categories" class="space-y-2">
                         <button class="category-btn w-full text-left px-4 py-2 rounded bg-green-600 text-white" data-category="all">
@@ -124,7 +127,8 @@
                         Checkout
                     </button>
                 </div>
-            </div>
+            </div> 
+        </div>
         </div>
     </div>
 
