--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <!-- Footer -->
     <footer class="bg-green-900 text-white py-8">
         <div class="max-w-7xl mx-auto px-4 text-center">
-            <p>&copy; © 2025 Green Earth. All Rights Reserved.</p>
+            <p>&copy; 2025 Green Earth. All Rights Reserved.</p>
         </div>
     </footer>
 
