--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       </div>
 
       <!-- Submit button -->
-      <button type="submit" class="w-full bg-yellow-400 text-green-700 py-3 rounded-full font-semibold hover:bg-green-700">
+      <button type="submit" class="w-full bg-yellow-400 text-black py-3 rounded-full font-semibold hover:bg-red-200">
        Donate Now
       </button>
 
